Started writing tests, working on increasing coverage aswell.