@@ -19,6 +19,9 @@ public class Warehouse {
     }
 
     public void addProduct(Product product) {
+        if (product == null) {
+        throw new NullPointerException("Product cannot be null");
+    }
         products.add(product);
     }
 
@@ -105,13 +108,13 @@ public class Warehouse {
                 .orElseThrow(() -> new ProductNotFoundException("Produkt med ID " + id + " hittades ej."));
     }
 
-    public Product findProductByIdFromUserInput() {
+    public void findProductByIdFromUserInput() {
         Scanner scanner = new Scanner(System.in);
         try {
             System.out.print("Ange produkt-ID (heltal): ");
             if (!scanner.hasNextInt()) {
                 System.out.println("Felaktig inmatning. Ange ett giltigt heltal.");
-                return null;
+                return;
             }
             int productId = scanner.nextInt();
             scanner.nextLine();
@@ -119,17 +122,15 @@ public class Warehouse {
             Product product = findProductById(productId);
 
             System.out.println("Produkt hittad: " + product);
-            return product;
 
         } catch (ProductNotFoundException e) {
             System.out.println(e.getMessage());
         } catch (InputMismatchException e) {
             System.out.println("Felaktig inmatning, vänligen ange rätt datatyp.");
         }
-        return null;
     }
 
-    public List<Product> filterProductsByCategoryFromUserInput() {
+    public void filterProductsByCategoryFromUserInput() {
         Scanner scanner = new Scanner(System.in);
         try {
             System.out.println("Välj kategori: 1. Frukt, 2. Grönsak, 3. Kött, 4. Fisk, 5. Mejeri");
@@ -154,7 +155,7 @@ public class Warehouse {
                     break;
                 default:
                     System.out.println("Ogiltigt val, försök igen.");
-                    return null;
+                    return;
             }
 
 
@@ -166,8 +167,6 @@ public class Warehouse {
                 System.out.println("Produkter i kategorin " + category + ":");
                 filteredProducts.forEach(System.out::println);
             }
-
-            return filteredProducts;
 
         } catch (Exception e) {
             throw new RuntimeException("Fel vid inmatning: " + e.getMessage());
@@ -188,7 +187,7 @@ public class Warehouse {
                 .collect(Collectors.toList());
     }
 
-    public List<Product> findProductsFromCreatedDateFromUserInput() {
+    public void findProductsFromCreatedDateFromUserInput() {
         Scanner scanner = new Scanner(System.in);
         try {
 
@@ -207,26 +206,108 @@ public class Warehouse {
                 filteredProducts.forEach(System.out::println);
             }
 
-            return filteredProducts;
-
         } catch (DateTimeParseException e) {
             System.out.println("Felaktigt datumformat, vänligen ange datum i formatet ÅÅÅÅ-MM-DD.");
         } catch (InputMismatchException e) {
             System.out.println("Felaktig inmatning, vänligen ange rätt datatyp.");
         }
-        return null;
     }
 
     public void findAndPrintMismatchedProducts() {
         List<Product> mismatchedProducts = products.stream()
                 .filter(product -> !product.createdDate().equals(product.lastModifiedDate()))
-                .collect(Collectors.toList());
+                .toList();
 
         if (mismatchedProducts.isEmpty()) {
             System.out.println("Hittar inga modifierade produkter.");
         } else {
             System.out.println("Produkter som modifierats:");
             mismatchedProducts.forEach(System.out::println);
+        }
+    }
+
+    public void updateProductInWarehouse(Product updatedProduct) {
+        products.removeIf(product -> product.id() == updatedProduct.id());
+
+        products.add(updatedProduct);
+    }
+
+    public void modifyProductByIdFromUserInput() {
+        Scanner scanner = new Scanner(System.in);
+        int productId = 0;
+
+        try {
+            System.out.print("Ange produkt-ID (heltal): ");
+            productId = scanner.nextInt();
+            scanner.nextLine();
+            Product product = findProductById(productId);
+
+            System.out.println("Produkt hittad: " + product);
+
+
+            System.out.print("Vill du ändra produktens namn? (ja/nej): ");
+            String changeName = scanner.nextLine();
+            String name = product.name();
+            if (changeName.equalsIgnoreCase("ja")) {
+                System.out.print("Ange nytt namn: ");
+                name = scanner.nextLine();
+            }
+
+            System.out.print("Vill du ändra produktens kategori? (ja/nej): ");
+            String changeCategory = scanner.nextLine();
+            Category category = product.category();
+            if (changeCategory.equalsIgnoreCase("ja")) {
+                System.out.println("Välj ny kategori: 1. Frukt, 2. Grönsak, 3. Kött, 4. Fisk, 5. Mejeri");
+                int categoryChoice = scanner.nextInt();
+                scanner.nextLine();
+                switch (categoryChoice) {
+                    case 1:
+                        category = Category.FRUIT;
+                        break;
+                    case 2:
+                        category = Category.VEGETABLE;
+                        break;
+                    case 3:
+                        category = Category.MEAT;
+                        break;
+                    case 4:
+                        category = Category.FISH;
+                        break;
+                    case 5:
+                        category = Category.DAIRY;
+                        break;
+                    default:
+                        System.out.println("Ogiltigt val, kategori ändrades ej.");
+                        break;
+                }
+            }
+
+
+            System.out.print("Vill du ändra produktens betyg? (ja/nej): ");
+            String changeRating = scanner.nextLine();
+            int rating = product.rating();
+            if (changeRating.equalsIgnoreCase("ja")) {
+                System.out.print("Ange nytt betyg (0-10): ");
+                rating = scanner.nextInt();
+                scanner.nextLine();
+            }
+
+            Product updatedProduct = new Product(
+                    product.id(),
+                    name,
+                    category,
+                    rating,
+                    product.createdDate(),
+                    LocalDate.now()
+            );
+
+            updateProductInWarehouse(updatedProduct);
+            System.out.println("Produkten har uppdaterats: " + updatedProduct);
+
+        } catch (ProductNotFoundException e) {
+            System.out.println("Produkten med ID " + productId + " hittades ej.");
+        } catch (Exception e) {
+            System.out.println("Felaktig inmatning, försök igen.");
         }
     }
 }
